--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm":"6.9.0",
+    "node": "10.16.0"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
